--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <header class="page-header">
 	<div class="container">
-		<h1> Lockan.Net 2016</h1>
+		<h1 class="text-center"> Lockan.Net 2016</h1>
 	</div>
 </header>
 	
@@ -33,9 +33,7 @@
 					<div class="panel-body">
 						<div class="media">
 						  <div class="media-left">
-							<a href="#">
-							  <img class="media-object" src="..." alt="...">
-							</a>
+							  <img class="media-object" src="img/preview_pocketdialer.jpg" alt="...">
 						  </div>
 						  <div class="media-body">
 							<h4 class="media-heading">{{subtitle}}</h4>
@@ -47,19 +45,24 @@
 			</div>
 		</div>
 	</div>
+	
+	<div ng-bind-html="renderbox()"></div>
+	
+	
 </body>
 
 <footer class="footer">
 	<div class="container">
-		<p class="text-muted">
-			Site design &copy; 2016 A. Lockhart. Powered by Bootstrap &amp;&amp; Angular.js
+		<p class="text-muted text-center">
+			<center>Site design &copy; 2016 A. Lockhart. Powered by Bootstrap &amp;&amp; Angular.js
 		</p>
 	</div>
 </footer>
 
 <script type="text/javascript" src="./js/jquery/jquery-2.1.4.min.js"></script>
 <script type="text/javascript" src="./js/bootstrap/bootstrap.js"></script>
-<script type="text/javascript" src="./js/angular/angular.js"></script>	
+<script type="text/javascript" src="./js/angular/angular.js"></script>
+<script type="text/javascript" src="./js/angular/angular-sanitize.js"></script>
 <script type="text/javascript" src="./js/appMain.js"></script>
 
 </html>
