--- a/index.html
+++ b/index.html
@@ -8,61 +8,41 @@
 	<link rel="stylesheet" href="./css/customstyles.css" />
 
 	<title> Lockan.Net 2016 </title>
+	<base href="/">
 </head>
-
-<header class="page-header">
-	<div class="container">
-		<h1 class="text-center"> Lockan.Net 2016</h1>
-	</div>
-</header>
 	
-<body ng-controller="mainController">
-	<div class="container">
-		<div class="page-header">
-			<h1>{{pageheader}}
+<body>
+	<!-- Main Site Header -->
+	<header class="page-header">
+		<div class="container">	
+			<h1 class="text-center"> LockNet 2016 </h1>
 		</div>
-	</div>
-
-	<div id="mainContainer" class="container">
-		<div id="testbox" class="panel panel-group">
-			<div class="panel panel-default">
-				<div class="panel-heading" data-toggle="collapse" data-parent="#testbox" data-target="#testcontent">
-					<h4 class="panel-title accordion-toggle">{{title}}</h4>
-				</div>
-				<div id="testcontent" class="panel-collapse">
-					<div class="panel-body">
-						<div class="media">
-						  <div class="media-left">
-							  <img class="media-object" src="img/preview_pocketdialer.jpg" alt="...">
-						  </div>
-						  <div class="media-body">
-							<h4 class="media-heading">{{subtitle}}</h4>
-							<p>{{description}}
-						  </div>
-						</div>
-					</div>
-				</div>
-			</div>
+		<a href="/"> Home </a><a href="/code"> Code </a> <a href="/resume"> Resume </a>
+	</header>
+	
+	<!-- Main Content Pane -->
+	<div id="main">
+		<div class="container">
+			<div ng-view></div>
 		</div>
 	</div>
 	
-	<div ng-bind-html="renderbox()"></div>
-	
+	<!-- Page Footer -->
+	<footer class="footer">
+		<div class="container">
+			<p class="text-muted text-center">
+				<center>Site design &copy; 2016 A. Lockhart. Powered by Bootstrap &amp;&amp; Angular.js
+			</p>
+		</div>
+	</footer>
 	
 </body>
-
-<footer class="footer">
-	<div class="container">
-		<p class="text-muted text-center">
-			<center>Site design &copy; 2016 A. Lockhart. Powered by Bootstrap &amp;&amp; Angular.js
-		</p>
-	</div>
-</footer>
 
 <script type="text/javascript" src="./js/jquery/jquery-2.1.4.min.js"></script>
 <script type="text/javascript" src="./js/bootstrap/bootstrap.js"></script>
 <script type="text/javascript" src="./js/angular/angular.js"></script>
 <script type="text/javascript" src="./js/angular/angular-sanitize.js"></script>
+<script type="text/javascript" src="./js/angular/angular-route.js"></script>
 <script type="text/javascript" src="./js/appMain.js"></script>
 
 </html>
