--- a/main.html
+++ b/main.html
@@ -2,5 +2,8 @@
 	<h1>{{pageheader}}</h1>
 </div>
 
-
-This is the main page. Isn't it exciting? 
+<ul class="nav navbar-default nav-stacked">
+	<li><a href="/"> Home </a></li>
+	<li><a href="/code"> Code </a></li>
+	<li><a href="/resume"> Resume </a></li>
+</ul>
