Dynamic loading of code sample data

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			<nav id="navmain" class="nav navbar-nav navbar-inverse" role="navigation">
 				<ul class="nav nav-justified">
 					<li><a href="/"> GoHome() </a></li>
-					<li><a href="/code"> SampleCode() </a></li>
+					<li><a href="/code"> ViewSampleCode() </a></li>
 					<li><a href="/resume"> ShowResume() </a></li>
 				</ul>
 			</nav>
