Code page content added && header link buttons added

--- a/codesamples/template_codesample.html
+++ b/codesamples/template_codesample.html
@@ -1,18 +1,24 @@
 <div id="codesamplebox_{{sample.id}}" class="panel panel-group">
 	<div class="panel panel-default">
 		<div class="panel-heading" data-toggle="collapse" data-parent="#codesamplebox_{{sample.id}}" data-target="#codesamplecontent_{{sample.id}}">
-			<h4 class="panel-title accordion-toggle">{{sample.title}}</h4>
+			<h3 class="panel-title accordion-toggle">{{sample.title}}</h3>
 		</div>
 		<div id="codesamplecontent_{{sample.id}}" class="panel-collapse">
 			<div class="panel-body">
 				<div class="media">
-				  <div class="media-left">
-					  <img class="media-object" ng-src="/img/{{sample.img}}" alt="testAltText" />
-				  </div>
-				  <div class="media-body">
-					<h4 class="media-heading">{{sample.subtitle}}</h4>
-					<p>{{sample.description}}
-				  </div>
+					<div class="media-left">
+						<img class="media-object" ng-src="/img/{{sample.img}}" alt="{{sample.img}}" />
+					</div>
+					<div class="media-body">
+						<h4 class="media-heading">Description</h4>
+						<p>
+							{{sample.description}}
+						</p>
+						<p>
+							<h4>Source Link:</h4>
+							<a href="{{sample.sourcelink}}">{{sample.linktext}}</a>
+						</p>
+					</div>
 				</div>
 			</div>
 		</div>
