--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 				<h1 class="text-left"> Andrew Lockhart </h1>
 			</div>
 			
-			<div id="linkbox">
-				<h1 class="btn-group" role="group">
-				<a href="http://www.github.com/lockan/" role="button" class="btn btn-primary">GitHub</a>
-				<a href="http://ca.linkedin.com/in/lockan/" role="button" class="btn btn-primary">LinkedIn</a>
-				<a href="#" role="button" class="btn btn-primary">E-mail</a>
+			<div id="linkpanel">
+				<h1 class="btn-group" role="group" style="line-height: 42px">
+				<span class="linkbox"><a href="http://www.github.com/lockan/" role="button" class="btn btn-primary"><img src="img/blacktocat-32.png" class="linkbutton"/></a></span>
+				<span class="linkbox"><a href="http://ca.linkedin.com/in/lockan/" role="button" class="btn btn-primary"><img src="img/In-2CRev-28px-TM.png" class="linkbutton"/></a></span>
+				<span class="linkbox"><a href="#" role="button" class="btn btn-primary"><span class="glyphicon glyphicon-envelope gi2 linkbutton"></span></a></span>
 				</h1>
 			</div>		
 			
