Removed collapse from boxes in code page

--- a/codesamples/template_codesample.html
+++ b/codesamples/template_codesample.html
@@ -1,9 +1,9 @@
 <div id="codesamplebox_{{sample.id}}" class="panel panel-group">
 	<div class="panel panel-default">
-		<div class="panel-heading" data-toggle="collapse" data-parent="#codesamplebox_{{sample.id}}" data-target="#codesamplecontent_{{sample.id}}">
+		<div class="panel-heading">
 			<h3 class="panel-title accordion-toggle">{{sample.title}}</h3>
 		</div>
-		<div id="codesamplecontent_{{sample.id}}" class="panel-collapse">
+		<div id="codesamplecontent_{{sample.id}}">
 			<div class="panel-body">
 				<div class="media">
 					<div class="media-left">
