Responsive nav elements - first pass

--- a/index.html
+++ b/index.html
@@ -12,47 +12,59 @@
 </head>
 	
 <body>
-	<!-- Main Site Header -->
-	<header id="mainheader" class="page-header">
-		
-			<div id="siteheading">	
-				<h1 class="text-left"> Andrew Lockhart </h1>
-			</div>
-			
-			<div id="linkpanel">
-				<h1 class="btn-group" role="group" style="line-height: 42px">
-				<span class="linkbox"><a href="http://www.github.com/lockan/" role="button" class="btn btn-primary"><img src="img/blacktocat-32.png" class="linkbutton"/></a></span>
-				<span class="linkbox"><a href="http://ca.linkedin.com/in/lockan/" role="button" class="btn btn-primary"><img src="img/In-2CRev-28px-TM.png" class="linkbutton"/></a></span>
-				<span class="linkbox"><a href="#" role="button" class="btn btn-primary"><span class="glyphicon glyphicon-envelope gi2 linkbutton"></span></a></span>
-				</h1>
-			</div>		
-			
-			<nav id="navmain" class="nav navbar-nav navbar-inverse" role="navigation">
-				<ul class="nav nav-justified">
-					<li><a href="/"> GoHome() </a></li>
-					<li><a href="/code"> ViewSampleCode() </a></li>
-					<li><a href="/resume"> ShowResume() </a></li>
-				</ul>
-			</nav>
-		
-	</header>
+	<div class="container-fluid">
+		<!-- Main Site Header -->
+		<header id="mainheader">
+				<div id="siteheading">	
+					<h1 class="text-left"> Andrew Lockhart <br/><small> OnlinePortfolio { return this; } </small></h1>
+				</div>
+				
+				<div id="linkpanel" class="hidden-xs">
+					<h1 class="btn-group" role="group" style="line-height: 42px">
+					<span class="linkbox"><a href="http://www.github.com/lockan/" role="button" class="btn btn-primary navbar-btn"><img src="img/blacktocat-32.png" class="linkbutton"/></a></span>
+					<span class="linkbox"><a href="http://ca.linkedin.com/in/lockan/" role="button" class="btn btn-primary navbar-btn"><img src="img/In-2CRev-28px-TM.png" class="linkbutton"/></a></span>
+					<span class="linkbox"><a href="#" role="button" class="btn btn-primary navbar-btn"><span class="glyphicon glyphicon-envelope gi2 linkbutton"></span></a></span>
+					</h1>
+				</div>	
+				
+				<nav id="navmain" class="nav navbar navbar-inverse" role="navigation">
+					<div class="nav-header">					
+						<div class="container-fluid">
+							<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#collapseme" aria-expanded="false">
+								<span class="icon-bar"></span>
+								<span class="icon-bar"></span>
+								<span class="icon-bar"></span>
+							</button>
+						</div>
+					</div>
+					<div id="collapseme" class="collapse navbar-collapse">
+						<ul class="nav nav-navbar nav-justified">
+							<li><a href="/"> GoHome() </a></li>
+							<li><a href="/code"> ViewSampleCode() </a></li>
+							<li><a href="/resume"> ShowResume() </a></li>
+						</ul>
+					</div>
+				</nav>
+
+		</header>
 	
-	<!-- Main Content Pane -->
-	<div id="main">
-		<div class="container-fluid">
-			<div ng-view></div>
+		<!-- Main Content Pane -->
+		<div id="main">
+		
+				<div ng-view></div>
+			
 		</div>
-	</div>
 	
 	<!-- Page Footer -->
 	<footer class="footer">
-		<div class="container">
-			<p class="text-muted text-center">
-				<center>Site design &copy; 2016 A. Lockhart. Powered by Bootstrap &amp;&amp; Angular.js
-			</p>
-		</div>
+		
+		<p class="text-muted text-center">
+			<center>Site design &copy; 2016 A. Lockhart. Powered by Bootstrap &amp;&amp; Angular.js
+		</p>
+		
 	</footer>
-	
+
+	</div>
 </body>
 
 <script type="text/javascript" src="./js/jquery/jquery-2.1.4.min.js"></script>
