A few minor styling tweaks

--- a/code.html
+++ b/code.html
@@ -1,8 +1,9 @@
 <div>
-	<h1>{{pageheader}}</h1>
+	<h1 class="page-header">{{pageheader}}</h1>
 </div>
 
 <div ng-repeat="sample in samples track by $index" ng-include="renderbox(sample)">
 </div>
+<p>&nbsp;</p>
 
 
