Resume content added, content link added; BG jump fixed

--- a/resume.html
+++ b/resume.html
@@ -2,4 +2,166 @@
 	<h1 class="page-header">{{pageheader}}</h1>
 </div>
 
-RESUME RESUME RESUME RESUME RESUME 
+<div id="panel_skills" class="panel panel-group">
+	<div class="panel panel-default" data-toggle="collapse" data-target="#panel_skills_content">
+		<div class="panel-heading">
+			<h3 class="panel-title accordion-toggle">Skills <span class="glyphicon glyphicon-plus pull-right"></span></h3>
+		</div>
+		<div id="panel_skills_content" class="collapse">
+			<div class="panel-body">
+				<ul>
+					<li>Technical proficiencies in a wide variety of hardware/software environments</li>
+					<li>Desktop, mobile, and web application development</li>
+					<li>Problem analysis and troubleshooting</li>
+					<li>Team leadership and management</li>
+					<li>Project and task planning</li>
+					<li>Interactive, graphics and 3D modelling applications</li>
+					<li>Audio/video and multimedia applications</li>
+				</ul>
+			</div>
+		</div>
+	</div>
+</div>
+
+<p/>
+
+<div id="panel_dev" class="panel panel-group">
+	<div class="panel panel-default" data-toggle="collapse" data-target="#panel_dev_content">
+		<div class="panel-heading">
+			<h3 class="panel-title accordion-toggle">Software Development Skills<span class="glyphicon glyphicon-plus pull-right"></span></h3>
+		</div>
+		<div id="panel_dev_content" class="collapse">
+			<div class="panel-body">
+				<ul>
+					<li>Object-oriented and procedural programming: Java, C# .NET, C, C++</li>
+					<li>Android mobile application development: Android SDK, Android Studio</li>
+					<li>Client-Server and Distributed applications development: .NET ASP, NodeJS</li>
+					<li>Web technologies: HTML, CSS, Javascript, Jquery, PHP, various frameworks</li>
+					<li>Database design: Oracle, SQL Server, MS Access</li>
+					<li>Source/Version Control: Perforce, Git, Subversion</li>
+				</ul>
+			</div>
+		</div>
+	</div>
+</div>
+
+<p/>
+
+<div id="panel_past" class="panel panel-group">
+	<div class="panel panel-default" data-toggle="collapse" data-target="#panel_past_content">
+		<div class="panel-heading">
+			<h3 class="panel-title accordion-toggle">Previous Experience <span class="glyphicon glyphicon-plus pull-right"></span></h3>
+		</div>
+		<div id="panel_past_content" class="collapse">
+			<div class="panel-body">
+				<section class="section09">
+					<span class="secsubtitle">Relic Entertainment Inc.</span>
+					<br/><span class="secsubtitle">Senior Development Tester</span>
+					<br/><span class="date">Nov.2009 - Aug. 2013</span>
+					<ul>
+						<li>Managed and scheduled QA Team and testing tasks</li>
+						<li>Tested, Tracked, and reported bugs</li>
+						<li>Coordinated tasking and communication for QA outsource team</li>
+						<li>Created assistive scripts and testing tools in C#, Python</li>
+					</ul>
+				</section>
+				<hr>
+				<section class="section09">
+					<span class="secsubtitle">Threewave Software</span>
+					<br/><span class="secsubtitle">Lead Quality Assurance Tester</span>
+					<br/><span class="date">Mar. 2007 - Nov. 2009</span>
+					<ul>
+						<li>Performed bug tracking, and reporting, with focus on online/multiplayer features. </li>
+						<li>Acted as a primary point of contact between QA, production, and external QA partners. </li>
+						<li>Assisted in hiring and training of new QA employees </li>
+						<li>Provided qualitative product feedback reviews</li>
+					</ul>
+				</section>
+				<hr>
+				<section class="section09">
+					<span class="secsubtitle">Relic Entertainment Inc. (THQ Canada)</span>
+					<br/><span class="secsubtitle">Development Tester - Temp. Contract</span>
+					<br/><span class="date">July 2006 - Sept. 2006</span>
+					<ul>
+						<li>Tested, tracked, and reported software defects</li>
+						<li>Prepared test plans and feature verification scripts</li>
+					</ul>
+				</section>
+				<hr>
+				<section class="section09">
+					<span class="secsubtitle">Electronic Arts Canada</span>
+					<br/><span class="secsubtitle">Online Quality Assurance Tester</span>
+					<br/><span class="date">April 2005 - Mar. 2006</span>
+					<ul>
+						<li>Bug testing, tracking, and reporting – specialized in multiplayer features</li>
+						<li>Network performance and connectivity testing for online software </li>
+						<li>Pre-regression of networking issue fixes for the online programming team </li>
+					</ul>
+				</section>
+			</div>
+		</div>
+	</div>
+</div>
+
+<p/>
+
+<div id="panel_education" class="panel panel-group">
+	<div class="panel panel-default" data-toggle="collapse" data-target="#panel_education_content">
+		<div class="panel-heading">
+			<h3 class="panel-title accordion-toggle">Education <span class="glyphicon glyphicon-plus pull-right"></span></h3>
+		</div>
+		<div id="panel_education_content" class="collapse">
+			<div class="panel-body">
+				<section class="section09">
+					<span class="secsubtitle">Diploma in Computer Systems Technology</span>
+					<br/><span class="secsubtitle">British Columbia Institute of Technology</span>
+					<br/><span class="date">Sept. 2013 – May 2015</span>
+					<ul>
+						<li>Learned about applied programming and software development skills, with a strong emphasis on group projects and teamwork</li>
+						<li>Studied Java, C, C++, web technologies, and supporting knowledge skills like object-oriented design, computer hardware architecture, and mathematics</li>
+					</ul>
+				</section>
+				<hr>
+				<section class="section09">
+					<span class="secsubtitle">Diploma in Game Art and Animation Production</span>
+					<br/><span class="secsubtitle">Art Institute of Vancouver – Burnaby</span>
+					<br/><span class="date">Oct. 2003 - Mar. 2005</span>
+					<ul>
+						<li>Studied 3D Animation, modelling, and texturing for game development</li>
+						<li>Learned to use Maya, Photoshop, and the Unreal game engine</li>
+						<li>Managed a team of students through a 9-month game prototype project</li>
+					</ul>
+				</section>
+				<hr>
+				<section class="section09">
+					<span class="secsubtitle">Diploma in Multimedia Production</span>
+					<br/><span class="secsubtitle">Lethbridge Community College</span>
+					<br/><span class="date">May 2000 - July 2001</span>
+					<ul>
+						<li>Studied a broad variety of multimedia technologies including web design, graphic design, audio design, and video editing</li>
+						<li>Learned to use applicable software packages such as Photoshop, Dreamweaver, Macromedia Director and Flash, Adobe Premiere, DigiDesign Pro tools</li>
+					</ul>
+				</section>
+			  </div>
+		</div>
+	</div>
+</div>
+
+<p/>
+
+<div id="panel_misc" class="panel panel-group">
+	<div class="panel panel-default" data-toggle="collapse" data-target="#panel_misc_content">
+		<div class="panel-heading">
+			<h3 class="panel-title accordion-toggle">Miscellaneous <span class="glyphicon glyphicon-plus pull-right"></span></h3>
+		</div>
+		<div id="panel_misc_content" class="collapse">
+			<div class="panel-body">			
+				<ul>
+					<li>BCIT Peer Tutor for new students (Winter term 2015)
+					<li>BCIT Student Association representative for Client-Server option
+					<li>Royal Conservatory of Music - Level 8 Piano (1999)
+				</ul>
+			</div>
+		</div>
+	</div>
+</div>
