Home page content stubbed in from old content

--- a/main.html
+++ b/main.html
@@ -2,8 +2,48 @@
 	<h1 class="page-header">{{pageheader}}</h1>
 </div>
 
-<ul class="nav navbar-default nav-stacked">
-	<li><a href="/"> Home </a></li>
-	<li><a href="/code"> Code </a></li>
-	<li><a href="/resume"> Resume </a></li>
-</ul>
+<div class="panel panel-group">
+	<div class="panel panel-default">
+		<div>
+			<div class="panel-body">
+				<div class="media">
+					<div class="media-left">
+						<img class="media-object" ng-src="/img/" alt="" />
+					</div>
+					<div class="media-body">
+						<h4 class="media-heading">Description</h4>
+						<p>
+							I am a technology enthusiast with a strong background in software development. 
+							I am seeking career opportunities that offer challenge, career growth, and an good life-work balance. 
+							I'm excited about the future of mobile and networked technologies in this increasingly connected world we now live in.
+						</p>
+						<p>
+							I'll be graduating the BCIT Computer Systems Technology diploma program in May 2015. 
+							I hope to use the knowledge gained there to make a career transition into application software development, with my eye on mobile and networked technologies.
+						</p>
+						<p>
+							
+							Prior to attending BCIT I was a QA Test Lead at Relic Entertainment. 
+							I have 8+ years experience as a QA tester on a number of online video game titles across a breadth of genres. 
+							I'm familar with software development processes and agile management processes. I've had experience working with a handful of game engines, 
+							and I'm also trained in multimedia design and 3D art and animation.
+						</p>
+						<p>
+						
+							In my spare time I independently produce electronic music. You can see that work here: http://www.lockhartmusic.ca
+
+							All summed up, I have a wide variety of creative, technical, and interpersonal skills and experience that make me an asset to any team. 
+							If you are interested in contacting me about employment opportunities please see the contact page.
+						</p>
+						<p>
+							<ul class="nav nav-pills nav-stacked">
+							  <li role="presentation"><a href="#"><span class="glyphicon glyphicon-console"></span> ViewSampleCode()</a></li>
+							  <li role="presentation"><a href="#"><span class="glyphicon glyphicon-pencil"></span> ShowResume()</a></li>
+							</ul>
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
