Styling changes, mailto hooked up

--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 			<div class="panel-body">
 				<div class="media">
 					<div class="media-left">
-						<img class="media-object" ng-src="" alt="" />
+						<img id="headshot" class="media-object" ng-src="img/rasbpi.jpg" alt="" />
 					</div>
 					<div class="media-body">
 						<h4 class="media-heading">{{contentheader}}</h4>
