--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 						<ul class="dropdown-menu">
 							<li><a href="http://www.github.com/lockan/" target="new"><img src="img/GitHub-Mark-Light-32px.png"/> &nbsp GitHub</a></li>
 							<li><a href="http://ca.linkedin.com/in/lockan/" target="new"><img src="img/In-2CRev-28px-TM.png"/> &nbsp LinkedIn</a></li>
-							<li><a href="#"><span class="glyphicon glyphicon-envelope gi2"></span> &nbsp;E-mail</a></li>
+							<li id="mail_link"></li>							
 						</ul>
 					</li>
 				
@@ -60,8 +60,11 @@
 	
 		<!-- Main Content Pane -->
 		<div id="main">
+			<div class="container">
 		
 			<div ng-view></div>
+			
+			</div>
 			
 		</div>
 		<!-- END Main Content Pane -->
@@ -83,5 +86,6 @@
 <script type="text/javascript" src="./js/angular/angular-sanitize.js"></script>
 <script type="text/javascript" src="./js/angular/angular-route.js"></script>
 <script type="text/javascript" src="./js/appMain.js"></script>
+<script type="text/javascript" src="./js/jmailto.js"></script>
 <!-- END Script Imports -->
 </html>
