Styling tweaks, content edits

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			<div class="container-fluid">
 				<a href="/">
 					<div class="navbar-header">
-						<h3>Andrew Lockhart <small> OnlinePortfoliow { return this; }</small></h3>
+						<h3>Andrew Lockhart <small> Online Portfoliow </small></h3>
 					</div>
 				</a>
 				<ul class="nav navbar-nav navbar-inverse">
@@ -72,7 +72,7 @@
 	<!-- Page Footer -->
 	<footer class="footer">
 		<h6 class="text-muted text-center">
-			<center>Site design &copy; 2016 A. Lockhart. Powered by Bootstrap &amp;&amp; Angular.js
+			<center>Site design &copy; 2016 A. Lockhart. Background photo by Kim Stallknecht.
 		</h6>
 	</footer>
 	<!-- END Page Footer -->
