--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
 		<div>
 			<div class="panel-body">
 				<div class="media">
-					<div class="media-left">
+					<div id="headshotwrapper">
 						<img id="headshot" class="media-object" ng-src="img/rasbpi.jpg" alt="" />
 					</div>
 					<div class="media-body">
