--- a/main/main_content.html
+++ b/main/main_content.html
@@ -1,23 +1,24 @@
 <p>
 	I am a technology enthusiast with a strong background in software development. 
-	I am seeking career opportunities that offer challenge, career growth, and an good life-work balance. 
+	I am seeking career opportunities that offer challenge, career growth, and a good life-work balance. 
 	I'm excited about the future of mobile and networked technologies in this increasingly connected world we now live in.
 </p>
 <p>
-	I'll be graduating the BCIT Computer Systems Technology diploma program in May 2015. 
-	I hope to use the knowledge gained there to make a career transition into application software development, with my eye on mobile and networked technologies.
+	I graduated with honors from the BCIT Computer Systems Technology diploma program in May 2015. 
+	The skills and experience I gained there were a first step onto an exciting new career path that I hope will continue to keep me learning. 
 </p>
 <p>
-	Prior to attending BCIT I was a QA Test Lead at Relic Entertainment. 
-	I have 8+ years experience as a QA tester on a number of online video game titles across a breadth of genres. 
-	I'm familar with software development processes and agile management processes. I've had experience working with a handful of game engines, 
-	and I'm also trained in multimedia design and 3D art and animation.
+	I have worked in software development for the past 10 years. I have spent the past year (2015 - 2016) working on a central Build Automation team at Electronic Arts. 
+	For 8 years prior to attending BCIT I worked as a Quality Assurance expert in various capacities on a number of shipped AAA game titles. 
 </p>
 <p>
 	In my spare time I independently produce electronic music. You can see that work here: 
 	<a href="http://www.lockhartmusic.ca">http://www.lockhartmusic.ca</a>
 </p>
 <p>
-	All summed up, I have a wide variety of creative, technical, and interpersonal skills and experience that make me an asset to any team. 
-	If you are interested in contacting me about employment opportunities please see the contact page.
+	I am currently seeking exciting career opportunities that will allow me to apply my skillset while continuing to learn from other experts in the field. 
+	I am especially interested in any positions related networked technologies and the Internet of Things. 
+</p>
+<p>
+	If you are interested in contacting me about employment opportunities please contact use one of the options found in the "Links" menu.
 </p>
